--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -5,22 +5,32 @@
 }
 
 body{
-    
+   
     
 }
 
 header {
     width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    /* align-items: flex-start; */
 }
 
-.container {
-    position: relative;
+header > nav {
     
 }
+
+.top_img {
+    position: relative;
+    
+} */
 
 header > h1 {
     letter-spacing: 5px;
     font-weight: bold;
+    
+    
 }
 .img_txt {
     position: absolute;
@@ -31,7 +41,7 @@ header > h1 {
 
 header > nav > ul > li {
     list-style: none;
-    display: inline;
+    display: inline-block;
     padding-left: 16%;
     font-weight: bold;
    
@@ -56,6 +66,15 @@ main {
     margin: 5px auto;
 }
 
+.main_one {
+    display: flex;
+    justify-content: row;
+}
+
+.main_one_b {
+    margin-right: 5px;
+}
+
 main > img {
     width: 100%;
 }
@@ -68,6 +87,12 @@ article {
     width: 80%;
     margin: 5px auto; 
     padding-top: 30px;
+
+}
+
+article > img{
+    width: 80%;
+    
 
 }
 
@@ -119,4 +144,24 @@ footer > hr {
     color: #494F4F;
     border-style: inset;
     /* display: block; */
+}
+
+form > input {
+    width: 250px;
+    height: 32px;
+    text-align: center;
+    border: none;
+    font-weight: bold;
+
+}
+
+form > button {
+    width: 140px;
+    height: 32px;
+    text-align: center;
+    border: 2px solid #000;
+    background: #BCE4E5;
+    font-weight: bold;
+    margin-left: 40px;
+
 }
