--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -1,32 +1,26 @@
 /* Custom Stylesheet */
 * {
-    font-family: 'Roboto', sans-serif;
-    color: #494F4F;
-}
-
-body{
-   
     
+    color: #494F4F;
 }
 
 header {
     width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    /* align-items: flex-start; */
+
 }
 
 header > nav {
-    
+    position: sticky;
 }
 
 .top_img {
     position: relative;
+    clear: both;
     
-} */
+} 
 
 header > h1 {
+    font-family: 'Raleway', sans-serif;
     letter-spacing: 5px;
     font-weight: bold;
     
@@ -48,6 +42,7 @@ header > nav > ul > li {
 }
 
 header > nav > ul > li > a {
+    font-family: 'Raleway', sans-serif;
     color: #4E9A9C;
     font-weight: bold;
     text-align: center;
@@ -69,6 +64,7 @@ main {
 .main_one {
     display: flex;
     justify-content: row;
+    font-family: 'Raleway', sans-serif;
 }
 
 .main_one_b {
@@ -79,8 +75,13 @@ main > img {
     width: 100%;
 }
 
+main h2,h3 {
+    font-family: 'Raleway', sans-serif;
+}
+
 main > p{
     width: 100%;
+    font-family: 'Lato', sans-serif;
 }
 
 article {
@@ -163,5 +164,11 @@ form > button {
     background: #BCE4E5;
     font-weight: bold;
     margin-left: 40px;
+}
+
+form > button:hover {
+
+    background: #000;
+    color: #fff;
 
 }
