--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -154,11 +154,78 @@ footer > hr {
     /* display: block; */
 }
 
-form {
+
+
+
+/* FORM 1 CONTAINER */
+
+.form-container {
+    padding: 20px 15%;
+    
+}
+
+.form-container h1 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    color: lightslategray;
+}
+
+/* FORM STYLES */
+
+#f1 input[name="name"] {
+    grid-area: name;
+}
+
+#f1 input[name="email"] {
+    grid-area: email;
+}
+
+
+
+#f1 textarea {
+     grid-area: comment;
+}
+
+#f1 input[type="submit"] {
+     grid-area: submit;
+}
+
+#f1 {
+    display: grid;
+    grid-template-areas:
+        'name email'
+        'comment comment'
+        'comment comment'
+        'comment comment'
+        'comment comment'
+        'comment comment'
+        'comment comment'
+        'comment comment'
+        'comment comment'
+        'submit submit';
+    grid-gap: 15px;
+    padding: 10px;
+}
+
+#f1 input, #f1 textarea {
+    /* border-radius: 10px; */
+    border: 2px solid #000;;
+    padding: 5px;
+}
+
+#f1 input::placeholder, #f1 textarea::placeholder {
+    color: lightslategray;
+}
+
+
+
+/* Form 2 in footer */
+#f2 {
     margin-top: 15px;
 }
 
-form > input {
+#f2 > input {
     width: 250px;
     height: 32px;
     text-align: center;
@@ -167,7 +234,7 @@ form > input {
 
 }
 
-form > button {
+#f2 > button {
     width: 140px;
     height: 32px;
     text-align: center;
@@ -177,7 +244,7 @@ form > button {
     margin-left: 40px;
 }
 
-form > button:hover {
+#f2 > button:hover {
 
     background: #000;
     color: #fff;
