--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -8,11 +8,6 @@ body {
     margin-top: 0;
 }
 
-header {
-
- 
-}
-
 header > nav {
     width: 100%;
     position: fixed;
@@ -23,14 +18,13 @@ header > nav {
 
 .top_img {
     position: relative;
+
 } 
 
 header > h1 {
     font-family: 'Raleway', sans-serif;
     letter-spacing: 12px;
-    font-weight: bold;
-    
-    
+    font-weight: bold; 
 }
 .img_txt {
     position: absolute;
@@ -250,3 +244,92 @@ footer > hr {
     color: #fff;
 
 }
+
+/* Responsiveness */
+
+/* form 1 comment form */
+@media only screen and (max-width: 750px) {
+
+/* navbar */
+
+
+/* header */
+header > h1 {
+    font-size: 25px;
+    letter-spacing: 4px;
+    font-weight: bold;
+}
+
+.img_txt {
+    position: absolute;
+    top: 55%;
+    left: 30%;
+    color: white;
+}
+
+/* main  */
+.main_one {
+    display: grid;
+    justify-content: column;
+}
+
+h1,h2,h3 {
+    text-align: center;
+}
+
+    #f1 {
+        display: grid;
+        grid-template-areas: 
+            'name'
+            'email'
+            'comment'
+            'comment'
+            'comment'
+            'comment'
+            'comment'
+            'comment'
+            'submit'
+    }
+
+    .form-container {
+        padding: 20px 10%;
+    }
+
+    /* form 2 comment form */
+
+footer {
+    margin-top: 15px;
+}
+
+footer ul {
+    text-align: center;
+}
+
+#f2 {
+    margin-top: 15px;
+}
+
+#f2 > button {
+    margin-top: 15px;
+   
+ }
+
+#f2 > input, #f2 > button {
+    text-align: center;
+}
+footer > hr {
+    margin-top: 20px;
+
+}
+}
+
+
+
+/*
+#f2 > button:hover {
+
+    background: #000;
+    color: #fff;
+
+}
+*/
