--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,8 +1,9 @@
 /* Custom Stylesheet */
 * {
-    
+    scroll-behavior: smooth;
     color: #494F4F;
 }
+
 
 body {
     margin-top: 0;
@@ -14,6 +15,7 @@ body {
     position: fixed; 
     top:65%; 
     right: 0;
+    z-index: 1;
 }
 
 header > nav {
@@ -309,11 +311,6 @@ header > nav > ul > li {
     font-weight: bold;
 }
 
-header > nav > ul > li > a {
-  
-
-}
-
 /* header */
 header > h1 {
     font-size: 25px;
@@ -326,6 +323,10 @@ header > h1 {
     top: 55%;
     left: 30%;
     color: white;
+}
+
+header img {
+    width: 90%;
 }
 
 /* main  */
