--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -18,12 +18,43 @@ body {
     z-index: 1;
 }
 
-header > nav {
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-    background: #fff;
-    display: inline-block;
+nav#menu-show a{
+    text-decoration: none;
+    font-weight: bold;
+    color: #4E9A9C; 
+}
+
+nav#menu-show ul {
+    list-style: none;
+}
+
+nav#menu-show li{
+    display: inline;
+    padding-left: 15%;
+}
+
+/* MENU SMALL */
+
+nav#menu-hide-bars{
+    display: none;
+   
+}
+
+nav#menu-hide-menu{
+    display: none;
+    /* margin-left: 0;
+    padding-left: 0; */
+    /* float: left; */
+}
+
+nav#menu-hide-menu a{
+    font-weight: bold;
+    color: #4E9A9C; 
+    text-decoration: none;
+}
+
+nav#menu-hide-menu ul {
+    list-style: none;
 }
 
 .top_img {
@@ -43,7 +74,7 @@ header > h1 {
     color: white;
 }
 
-header > nav > ul > li {
+/* header > nav > ul > li {
     list-style: none;
     display: inline;
     padding-left: 16%;
@@ -55,7 +86,7 @@ header > nav > ul > li > a {
     color: #4E9A9C;
     font-weight: bold;
     text-align: center;
-}
+} */
 
 header > img {
     width: 100%;
@@ -277,39 +308,38 @@ footer > hr {
 
 /* Responsiveness */
 
-/* form 1 comment form */
 @media only screen and (max-width: 750px) {
 
-/* navbar */
-/* header > nav > ul > li {
-    display: none;
-    float: left;
-} */
+    nav#menu-show{
+        display: none;
+    }
 
-header > nav {
-    /* display: none; */
-}
+    nav#menu-hide-bars{
+        display: inline-block;
+        position: fixed;
+        z-index: 1;
+    }
 
-.social-icon{
-    width: 25px; 
-    height: 75px; 
-    position: fixed; 
-    top:45%; 
-    right: 2%;
-}
+    nav#menu-hide-bars:hover ~ nav#menu-hide-menu{
+        display: inline-block;
+        
+    }
 
-header > ul {
-    list-style-type:none;
-    margin:0;
-    padding:0;
-    position: absolute;
-}
-header > nav > ul > li {
-    display: inline-block;
-    padding-left: 0;
-    float: left;
-    font-weight: bold;
-}
+    nav#menu-hide-menu:hover{
+        display: inline-block;
+    }
+    /* ?? Monument text disappears when menu opens up 
+    in smartphone view */
+    
+
+    .social-icon{
+        width: 25px; 
+        height: 75px; 
+        position: fixed; 
+        top:45%; 
+        right: 2%;
+    }
+
 
 /* header */
 header > h1 {
@@ -320,8 +350,8 @@ header > h1 {
 
 .img_txt {
     position: absolute;
-    top: 40%;
-    left: 28%;
+    top: 30%;
+    left: 24%;
     color: white;
 }
 
